5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1596_2895.log
== TEST (2019-03-23 23:12:04) 
-- CODE:
quantidade=int(input("quantidade de jogos: "))
valor=float(input("valor unitario de cada jogo: ")))
frete=float(input("valor do frete: "))
total=valor*frete+quantidade
print(total)
-- ERROR:
File "XXXX", line 2
    valor=float(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:12:19) 
-- CODE:
quantidade=int(input("quantidade de jogos: "))
valor=float(input("valor unitario de cada jogo: "))
frete=float(input("valor do frete: "))
total=valor*frete+quantidade
print(total)
-- OUTPUT:
3522.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:13:01) 
-- CODE:
quantidade=int(input("quantidade de jogos: "))
valor=float(input("valor unitario de cada jogo: "))
frete=float(input("valor do frete: "))
total=valor*frete+quantidade
print(total)
-- EXECUTION TIME:
0.124471
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
3522.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
6375.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
313221.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:45:10) 
-- CODE:
quantidade=int(input("Quantidade de jogos: "))
valor=float(input("Valor de cada jogo: "))
frete=float(input("Valor do frete: "))
total=valor*frete+quantidade
print(total)
-- EXECUTION TIME:
0.130433
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
3522.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
6375.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
313221.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:46:13) 
-- CODE:
quantidade=int(input("Quantidade de jogos: "))
valor=float(input("Valor de cada jogo: "))
frete=float(input("Valor do frete: "))
total=quantidade*valor+frete
print(total)
-- EXECUTION TIME:
0.162619
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
